# GLFW_Practice

./: .gitignore  CMakeLists.txt  README.md  Shader.cpp  glad.c  main.cpp  shader.cpp
exercises/: CMakeLists.txt  CoordinateSystems9.9-Exercise3.cpp  HelloTriangle5.8-Exercise1.cpp  HelloTriangle5.8-Exercise2.cpp  HelloTriangle5.8-Exercise3.cpp  Shaders6.8-Exercise1.cpp  Shaders6.8-Exercise2.cpp  Shaders6.8-Exercise3.cpp  Textures8.19-Exercise1.cpp  Textures8.19-Exercise2.cpp  glad.c
include/: Blah.h  polygon.hpp  shader.h  shader.hpp  shape.hpp
include/glad/: glad.h
include/shaders/: FragShader.glsl  VertShader.glsl
shaderSource/: FragShader.glsl  VertShader.glsl
shaders/: FragShader.glsl  VertShader.glsl
src/: CMakeLists.txt  Textures8.19-Exercise1.cpp  glad.c  main.cpp  polygon.cpp  shader.cpp  shape.cpp
